--- a/article/css/单标签下的日间,黑夜模式切换按钮效果.md
+++ b/article/css/单标签下的日间,黑夜模式切换按钮效果.md
@@ -1,4 +1,30 @@
-# 
+# 单标签下的日间/黑夜模式切换按钮效果
+## 拟态阴影
+使用两组阴影，使用两个相反的方向，使用两组对比明显的颜色值，来实现凹凸效果。  
+需要使用盒子的内阴影实现。看个例子：
+``` 
+<div>浮雕阴影</div>
+<div>浮雕阴影</div>
+
+div {
+    width: 120px;
+    height: 120px;
+    background: #e9ecef;
+    color: #333;
+    box-shadow:
+        7px 7px 12px rgba(0, 0, 0, .4),
+        -7px -7px 12px rgba(255, 255, 255, .9);
+}
+
+div:nth-child(2) {
+    box-shadow:
+        inset -7px -7px 12px rgba(255, 255, 255, .9),
+        inset 7px 7px 12px rgba(0, 0, 0, .4);
+}
+```
+
+## 日间模式的实现
+
 
 原文:  
 [Amazing！！单标签下的日间/黑夜模式切换按钮效果](https://mp.weixin.qq.com/s/wZXlK5luEGs6nO-PYNJgUA)
